# pi-tts-discord-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  codeql.yml
bot/: client.py  commands.py
bot/tts/: engine.py
config/: models.yaml  settings.py
